[gd_scene load_steps=5 format=3 uid="uid://cdyvc730gxbqk"]

[ext_resource type="Script" uid="uid://ce6wvpkwqj11i" path="res://scenes/projectiles/projectile_base.gd" id="1_5gmwr"]
[ext_resource type="PackedScene" uid="uid://f5074dr7dxvs" path="res://scenes/components/hitbox_2d.tscn" id="1_d8863"]

[sub_resource type="CircleShape2D" id="CircleShape2D_iupiv"]
radius = 2.5

[sub_resource type="CircleShape2D" id="CircleShape2D_tcpxr"]
radius = 5.0

[node name="ProjectileBase" type="CharacterBody2D"]
collision_layer = 0
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_5gmwr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_iupiv")
disabled = true

[node name="Hitbox2D" parent="." instance=ExtResource("1_d8863")]

[node name="CollisionShape2D" parent="Hitbox2D" index="0"]
shape = SubResource("CircleShape2D_tcpxr")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]

[editable path="Hitbox2D"]
